ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: wallarm-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/wallarm-mode: "block"
    nginx.ingress.kubernetes.io/wallarm-application: "2"
spec:
  ingressClassName: nginx
  rules:
    - host: httpbin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80
